# trade

./: dxdiag.txt  index.html
sell-monitor/: .env  .env.example  README.md  pyproject.toml  tmp_market_data.json  tmp_positions.json  tmp_watchlist.json
sell-monitor/docs/: Telegram通知使用说明.md  卖出回测规则说明.md  卖出提醒工具 Prompt.md  卖出提醒工具使用说明.md  当前开仓策略说明.md  监控中心使用说明.md  邮件通知配置说明.md
sell-monitor/examples/: positions.json  user_rules.json  watchlist.json
sell-monitor/runtime_cache/: 000807_15m.json  000807_1d.json  000807_daily_zones.json  000807_quote.json  002074_15m.json  002074_1d.json  002074_daily_zones.json  002074_quote.json  002230_15m.json  002230_1d.json  002230_daily_zones.json  002230_quote.json  002241_15m.json  002241_1d.json  002241_daily_zones.json  002241_fundamental.json  002241_quote.json  002739_15m.json  002739_1d.json  002739_daily_zones.json  002739_quote.json  300014_15m.json  300014_1d.json  300014_daily_zones.json  300014_fundamental.json  300014_quote.json  300015_15m.json  300015_1d.json  300015_daily_zones.json  300015_fundamental.json  300015_quote.json  300418_15m.json  300418_1d.json  300418_daily_zones.json  300418_quote.json  300627_15m.json  300627_1d.json  300627_daily_zones.json  300627_quote.json  601012_1d.json  (+35 more)
sell-monitor/scripts/: _config.ps1  _python.ps1  backtest_entry.ps1  backtest_strategy.ps1  diagnose_akshare_env.ps1  diagnose_baostock.ps1  replay_advice.ps1  replay_entry.ps1  run_akshare.ps1  scan_entry.ps1  send_test_email.ps1  smoke_goertek_002241.py
sell-monitor/sell_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+2 more)
(+191 files in other folders)
